Improve purge by using our own last login value stored in the db.